Refactor Project 2