@@ -4,7 +4,6 @@ import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class URL {
 
@@ -13,6 +12,6 @@ public class URL {
   }
 
   public static List<Integer> decodeIntList(String s) {
-    return Arrays.stream(s.split(",")).map(Integer::parseInt).collect(Collectors.toList());
+    return Arrays.stream(s.split(",")).map(Integer::parseInt).toList();
   }
 }
